cadastrando cliente e endereco